# docs/static/openapi.json
@@ -36,7 +36,7 @@
         "parameters": [
           {
             "name": "id",
-            "description": "id in any form the client has it: hyphenated, lower case, with the\nconfusable characters unfolded. The module normalises before looking up.",
+            "description": "id in any form the client has it: hyphenated, lower case, with the\r\nconfusable characters unfolded. The module normalises before looking up.",
             "in": "path",
             "required": true,
             "type": "string"
@@ -72,6 +72,28 @@
             "type": "string"
           }
         ],
+        "tags": [
+          "Query"
+        ]
+      }
+    },
+    "/yamale/blockchain/alias/v1/auditors": {
+      "get": {
+        "operationId": "Query_Auditors",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/QueryAuditorsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/Status"
+            }
+          }
+        },
         "tags": [
           "Query"
         ]
@@ -193,6 +215,37 @@
         ]
       }
     },
+    "/yamale/blockchain/alias/v1/regulator/{country}": {
+      "get": {
+        "operationId": "Query_Regulator",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/QueryRegulatorResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/Status"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "country",
+            "description": "country is an ISO 3166-1 alpha-2 code, in any case.",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "Query"
+        ]
+      }
+    },
     "/yamale/blockchain/alias/v1/retired/{id}": {
       "get": {
         "operationId": "Query_Retired",
@@ -213,6 +266,36 @@
         "parameters": [
           {
             "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "Query"
+        ]
+      }
+    },
+    "/yamale/blockchain/alias/v1/viewing_keys/{address}": {
+      "get": {
+        "operationId": "Query_ViewingKeys",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/QueryViewingKeysResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/Status"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "address",
             "in": "path",
             "required": true,
             "type": "string"
@@ -3390,6 +3473,9 @@
         },
         "name": {
           "type": "string"
+        },
+        "payload_store_url": {
+          "type": "string"
         }
       }
     },
@@ -3422,6 +3508,36 @@
         },
         "paused": {
           "type": "boolean"
+        }
+      }
+    },
+    "AuditorEntitlement": {
+      "type": "object",
+      "properties": {
+        "grant": {
+          "$ref": "#/definitions/AuditorGrant"
+        },
+        "key": {
+          "$ref": "#/definitions/ViewingKey"
+        }
+      }
+    },
+    "AuditorGrant": {
+      "type": "object",
+      "properties": {
+        "address": {
+          "type": "string"
+        },
+        "granted_by": {
+          "type": "string"
+        },
+        "granted_at_height": {
+          "type": "string",
+          "format": "int64"
+        },
+        "expires_at_height": {
+          "type": "string",
+          "format": "int64"
         }
       }
     },
@@ -4281,6 +4397,18 @@
         }
       }
     },
+    "QueryAuditorsResponse": {
+      "type": "object",
+      "properties": {
+        "auditors": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/AuditorEntitlement"
+          }
+        }
+      }
+    },
     "QueryAuthoritiesResponse": {
       "type": "object",
       "properties": {
@@ -4820,6 +4948,17 @@
         }
       }
     },
+    "QueryRegulatorResponse": {
+      "type": "object",
+      "properties": {
+        "appointment": {
+          "$ref": "#/definitions/RegulatorAppointment"
+        },
+        "key": {
+          "$ref": "#/definitions/ViewingKey"
+        }
+      }
+    },
     "QueryRetiredResponse": {
       "type": "object",
       "properties": {
@@ -4893,6 +5032,18 @@
         }
       }
     },
+    "QueryViewingKeysResponse": {
+      "type": "object",
+      "properties": {
+        "keys": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/ViewingKey"
+          }
+        }
+      }
+    },
     "RedemptionStatus": {
       "type": "string",
       "enum": [
@@ -4902,6 +5053,24 @@
         "REDEMPTION_STATUS_CANCELLED"
       ],
       "default": "REDEMPTION_STATUS_UNSPECIFIED"
+    },
+    "RegulatorAppointment": {
+      "type": "object",
+      "properties": {
+        "country": {
+          "type": "string"
+        },
+        "address": {
+          "type": "string"
+        },
+        "appointed_by": {
+          "type": "string"
+        },
+        "appointed_at_height": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
     },
     "Restriction": {
       "type": "object",
@@ -5123,6 +5292,33 @@
         "VERIFY_SCHEDULE"
       ],
       "default": "VERIFICATION_UNSPECIFIED"
+    },
+    "ViewingKey": {
+      "type": "object",
+      "properties": {
+        "address": {
+          "type": "string"
+        },
+        "version": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "public_key": {
+          "type": "string",
+          "format": "byte"
+        },
+        "registered_at_height": {
+          "type": "string",
+          "format": "int64"
+        },
+        "revoked": {
+          "type": "boolean"
+        },
+        "revoked_at_height": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
     },
     "Vote": {
       "type": "object",
